add_subdirectory("01_depthTesting")
add_subdirectory("02_stencilTesting")
add_subdirectory("03_blending")
add_subdirectory("04_faceCulling")
add_subdirectory("05_frameBuffers")
add_subdirectory("06_cubeMaps")
add_subdirectory("07_advancedData")
add_subdirectory("08_advancedGLSL")
add_subdirectory("09_geometryShader")
add_subdirectory("10_instancing")
add_subdirectory("11_antiAliasing")
